# Codelta_ws

./: README.md
Arduino Codes/: Connections
Arduino Codes/Home_Positioned/: Home_Positioned.ino
Arduino Codes/Home_Positioned2.ino/Home_Positioned2/: Home_Positioned2.ino
Arduino Codes/Home_Positioned3.ino/: Home_Positioned3.ino.ino
Arduino Codes/Home_Positioned4/: Home_Positioned4.ino
Arduino Codes/Home_Teach_Vaccum/: Home_Teach_Vaccum.ino
Arduino Codes/Home_and_Teached/: Home_and_Teached.ino
Arduino Codes/IK_Test_Code/: IK_Test_Code.ino
Arduino Codes/Limit_Check/: Limit_Check.ino
Arduino Codes/Stepper_Control/: Stepper_Control.ino
Arduino Codes/Steps_Counter/: Steps_Counter.ino
Arduino Codes/Teached_Grok/Teached_G/: Teached_G.ino
Arduino Codes/Teached_P/: Teached_P.ino
Arduino Codes/sketch_jun30a/: sketch_jun30a.ino
SDF/: biglide.sdf  conveyor.sdf  default_detach.sdf  detachable_joints.sdf  inter.sdf  joint_position.sdf  model.sdf  nao joint control.sdf  single_delta.sdf
SDF/meshes/arm_link3b_1/: body1_visual.mtl
SDF_V2/: model.sdf
SDF_V2/meshes/base_link_1/: body1_visual.mtl
SDF_V3/: model.sdf
delta_gz_sim/: setup.cfg  setup.py
delta_gz_sim_cpp/: package.xml
delta_gz_sim_cpp/launch/: delta_gzsim.launch.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/delta_description/share/delta_description/: package.sh  (+5 more)
log/: latest_build
src/delta_description/: CMakeLists.txt
src/delta_gz_sim_cpp/: CMakeLists.txt
src/delta_gz_sim_cpp/descriptions/: robot.sdf  robot_world.sdf
src/kinematics/: setup.py
(+19 files in other folders)
